style.css
/* @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+Arabic:wght@100..900&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"); */
@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+Arabic:wght@100..900&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap");
@layer reset, theme, global, layout, modules, utilities, library;

@layer reset {
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  body {
    /* font-family: "TikTok Sans", sans-serif; */
    font-family: "Noto Sans Arabic", sans-serif;
    font-family: "Cairo", sans-serif;
    font-display: swap;
    margin: 0;
    padding: 0;
    background-color: #000000;
    color: var(--text-color);
  }
  ul {
    padding: 0;
    list-style: none;
    margin: 0;
  }
  ol {
    margin: 0;
    padding: 0;
  }
  :root {
    font-size: clamp(0.9rem, 0.3svw + 0.8rem, 1.05rem);
    scroll-behavior: smooth;
    direction: rtl;
  }
}

@layer theme {
  :root {
    --secondary-color: #4caf50;
    --text-color: #ffffff;
    --text-color-gray: #e6e3e3;
    --background-color: #000000;
    --border-gray: #2c2c2c;
  }
}

@layer global {
  a {
    text-decoration: none;
    color: var(--text-color);
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin: 0;
    padding: 0;
    font-family: var(--font-family);
    color: var(--text-color);
    line-height: 1.6;
  }
  h1 {
    font-size: 2rem;
  }
  p {
    margin: 0;
    padding: 0;
    line-height: 1.6;
  }
  button {
    cursor: pointer;
    font-family: inherit;
    border: none;
    padding: 0;
    font-size: inherit;
    color: inherit;
  }
  img {
    object-position: center;
    object-fit: cover;
  }
  table {
    width: 100%;
    border-collapse: collapse;
    color: var(--text-color);
    border: 1px solid var(--border-gray);
    border-radius: 8px;
  }
  th,
  td {
    padding: 0.2rem;
    border: 1px solid var(--border-gray);
  }
  /* add background color for table rows */
  tr:nth-child(even) {
    background-color: #242121;
  }
}

@layer layout {
  .header {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    max-height: 90px;
    padding: 1rem;
  }
  .navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1400px;
    background-color: var(--background-color);
  }
  .nav-links {
    display: flex;
    gap: 2rem;
    justify-content: space-between;
    font-size: 1.1rem;
  }
  .nav-links a {
    color: var(--text-color);
    border-bottom: 2px solid transparent;
    transition: all 0.3s ease;
  }
  .nav-links a:hover {
    color: var(--text-color);
    border-bottom: 2px solid var(--text-color);
  }
}
/* ... */

